--- a/AmazonWebScraping.ipynb
+++ b/AmazonWebScraping.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Web scraping from Amazon\n",
     "\n",
-    "The purpose of this project is to create a function which reads a price of a product from Amazon website daily and data is store in a csv file. Using BeautifulSoup and requests libraries, data from Amazon website is scraped and stored in a csv file using csv library. \n",
+    "The purpose of this project is to create a function which reads the price of a product from Amazon website daily and data is store in a csv file. Using BeautifulSoup and requests libraries, data from Amazon website is scraped and stored in a csv file using csv library. \n",
     "\n",
     "\n"
    ]
